2010-10-24	Nicolas Laplume <nikakd@users.sourceforge.net> *V250 *mis_m.c: Reduce number of duration steps #ast4.c: Changes to damaged equipment screen

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-10-24	Nicolas Laplume <nikakd@users.sourceforge.net>
+
+	* V250
+
+	*mis_m.c: Reduce the number of durations steps by 1
+
+	*ast4.c: Changes to the damaged equipment screen
+
 2010-06-22	Krzysztof Kosciuszkiewicz <drvee@users.sourceforge.net>
 
 	* V249
