*V252 *Added Reentry Corridor step to lunar missions

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-01-01	Nicolas Laplume <nikakd@users.sourceforge.net>
+
+	* V252
+
+	* Added Reentry Corridor step to Lunar Missions
+
 2010-12-18	Nicolas Laplume <nikakd@users.sourceforge.net>
 
 	* V251
