*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-01-05	Leon Baradat <peyre@users.sourceforge.net>
+
+	* V253
+
+	* hist.dat, rast.dat, sov_port.dat: Changed names of some Soviet hardware to be more historically accurate
+
 2011-01-01	Nicolas Laplume <nikakd@users.sourceforge.net>
 
 	* V252
