2011-02-10	Nicolas Laplume <nikakd@users.sourceforge.net> *V254 *Added FIX button in R&D *Changed version to 0.4.9

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2011-02-10	Nicolas Laplume <nikakd@users.sourceforge.net>
+
+	* V254
+
+	* Added FIX button in R&D and Hardware Purchase
+
+	* Added option to enable Atlas to lunar missions
+
+	* Changed version to 0.4.9
+
 2011-01-05	Leon Baradat <peyre@users.sourceforge.net>
 
 	* V253
